--- a/www/index.html
+++ b/www/index.html
@@ -50,9 +50,9 @@
           <ion-header-bar class="bar bar-header bar-dark"></ion-header-bar>
           <ion-content has-header="true">
               <ion-list>
-                  <ion-item href="#/" menu-close>Inicio</ion-item>
-                  <ion-item href="#/about" menu-close>Doações</ion-item>
-                  <ion-item href="#/about" menu-close>Instituicoes</ion-item>
+                  <ion-item href="#/" menu-close><i class="ion-home"></i> Inicio</ion-item>
+                  <ion-item href="#/about" menu-close><i class="ion-ios-paper"></i> Doações</ion-item>
+                  <ion-item href="#/about" menu-close><i class="ion-information"></i> Instituicoes</ion-item>
               </ion-list>
           </ion-content>
       </ion-side-menu>
