Aplicado visualização de minhas transacoes e loading no carregamento ajax.

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
     -->
   <ion-side-menus>
 
-      <ion-pane ion-side-menu-content>
+      <ion-pane ion-side-menu-content="">
           <ion-nav-bar class="bar-positive nav-title-slide-ios7">
               <ion-nav-back-button class="button-icon"><span class="icon ion-ios7-arrow-left"></span></ion-nav-back-button>
           </ion-nav-bar>
@@ -50,9 +50,9 @@
           <ion-header-bar class="bar bar-header bar-dark"></ion-header-bar>
           <ion-content has-header="true">
               <ion-list>
-                  <ion-item href="#/" menu-close><i class="ion-home"></i> Inicio</ion-item>
-                  <ion-item href="#/about" menu-close><i class="ion-ios-paper"></i> Doações</ion-item>
-                  <ion-item href="#/about" menu-close><i class="ion-information"></i> Instituicoes</ion-item>
+                  <ion-item href="#/" menu-close=""><i class="ion-home"></i> Inicio</ion-item>
+                  <ion-item href="#/about" menu-close=""><i class="ion-ios-paper"></i> Doa&#xE7;&#xF5;es</ion-item>
+                  <ion-item href="#/about" menu-close=""><i class="ion-information"></i> Instituicoes</ion-item>
               </ion-list>
           </ion-content>
       </ion-side-menu>
