--- a/www/index.html
+++ b/www/index.html
@@ -7,10 +7,11 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+      <link href="lib/ion-autocomplete/dist/ion-autocomplete.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+      <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+      <link href="css/ionic.app.css" rel="stylesheet">
+      -->
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -19,7 +20,7 @@
     <script src="cordova.js"></script>
     <script src="js/ng-cordova.min.js"></script>
     <script src="lib/ionic/js/sticky.js"></script>
-
+    <script src="lib/ion-autocomplete/dist/ion-autocomplete.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
